--- a/package.json
+++ b/package.json
@@ -6,8 +6,14 @@
     "react-scripts": "3.0.1"
   },
   "dependencies": {
+    "apollo-client-preset": "^1.0.8",
+    "apollo-link-ws": "^1.0.17",
+    "graphql": "^14.3.0",
+    "graphql-tag": "^2.10.1",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "subscriptions-transport-ws": "^0.9.16",
+    "typescript": "^3.4.5"
   },
   "scripts": {
     "start": "react-scripts start",
