--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "graphql": "^14.3.0",
     "graphql-tag": "^2.10.1",
     "react": "^16.8.6",
+    "react-apollo": "^2.5.5",
     "react-dom": "^16.8.6",
     "subscriptions-transport-ws": "^0.9.16",
     "typescript": "^3.4.5"
